--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "@author/package",
+  "name": "@santi100a/collatz-conjecture",
   "version": "0.0.1",
   "main": "cjs/index.js",
   "module": "index.js",
   "typings": "cjs/index.d.ts",
   "license": "MIT",
   "devDependencies": {
-		"@types/jest": "^29.4.1",
-		"@typescript-eslint/eslint-plugin": "^6.4.0",
-		"@typescript-eslint/parser": "^6.4.0",
-		"eslint": "^8.47.0",
-		"eslint-plugin-jest": "^27.2.3",
-		"jest": "^29.4.3",
-		"prettier": "^3.0.2",
-		"remark-cli": "^11.0.0",
-		"remark-gfm": "^3.0.1",
-		"remark-validate-links": "^12.1.1",
-		"typescript": "4.9.5"
-	},
-  "author": "",
-  "description": "",
-  "keywords": [],
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "eslint": "^9.1.0",
+    "eslint-plugin-jest": "^28.2.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "remark-cli": "^12.0.0",
+    "remark-validate-links": "^13.0.1",
+    "typescript": "4.9.5"
+  },
+  "author": "Santiago Rojas <santyrojasprieto9+github@gmail.com>",
+  "description": "Santi's Collatz Sequence Generator: See the 3x+1 of any natural!",
+  "keywords": ["es3", "portable", "santi100a", "math", "collatz"],
   "repository": {
-    "url": "https://github.com/<author>/<repo>",
+    "url": "https://github.com/santi100a/collatz-conjecture",
     "type": "git"
   },
   "scripts": {
@@ -30,7 +29,7 @@
     "test": "jest",
     "dev": "tsc -w",
     "prettify": "prettier --write src/**/*.ts",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/index.ts --no-ignore",
     "esm-wrapper": "node scripts/esm-wrapper.js",
     "validate-package-json": "node scripts/validate-package-json.js",
     "lint-fix": "eslint --fix src/**/*.ts",
@@ -38,5 +37,8 @@
     "check-links": "remark --frail .",
     "postbuild": "yarn esm-wrapper",
     "prepublishOnly": "yarn validate-package-json"
+  },
+  "dependencies": {
+    "@santi100a/assertion-lib": "^2.0.4"
   }
 }
